updated index.css and index.html to make sections more flexbox responsive

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/KA.logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>KKM Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -71,17 +71,17 @@
          <img src="kaa1_logo.png">
       </h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wl eum iriure dolor in hendrerit in vulpu
+        >/full-stack.web.developer/ with a passion for creating intuitive and engaging web experiences <+> humanize interfaces through which we communicate, share ideas, and connect with one another.
     </div>
     <div class="image">
-      <img src="/src/assets/ka_profile_photo.png">
+      <img src="./KA_BrandingGradient.png">
     </div>
   </div>
   <a href="#portfolio" class="js-scroll scroll-to scroll-to-intro"></a>
 
 </section>
 
-<!-- <div class="w-100 bg-yellow">
+<div class="w-100 bg-yellow">
   <div class="w-200 h-100 conveyor flex items-stretch">
         <div class="w-25 h-100 bg-red box"></div>
         <div class="w-25 h-100 bg-purple box"></div>
@@ -92,7 +92,7 @@
         <div class="w-25 h-100 bg-yellow box"></div>
         <div class="w-25 h-100 bg-blue box"></div>
       </div>
-</div> -->
+</div>
 
 <section class="portfolio" id="portfolio">
   <h1>
@@ -104,6 +104,7 @@
     <ul class="filters-list">
       <li>
         <a href="#" class="selected" data-filter=".language">All</a>
+      </li>
       <li>
         <a href="#" data-filter=".html">HTML</a>
       </li>
@@ -120,9 +121,6 @@
         <a href="#" data-filter=".sql">SQL</a>
       </li> 
 
-
-
-
     </ul>
     
   </div>
@@ -135,7 +133,7 @@
   <div class="w-100 h-50 bg-yellow conveyor-belt overflow-hidden box">
       <!--    our inner element is 2x the width and scrolls from right to left like a film strip    -->
       <div class="w-200 h-100 conveyor flex items-stretch">
-        <div class="w-25 h-100 bg-red box"></div>
+        <div class="w-25 h-100 bg-red box">box1</div>
         <div class="w-25 h-100 bg-purple box"></div>
         <div class="w-25 h-100 bg-yellow box"></div>
         <div class="w-25 h-100 bg-blue box"></div>
@@ -148,8 +146,9 @@
 
   
 
-  <a href="#contact" class="js-scroll scroll-to scroll-to-intro"></a>
+  
 </div>
+  <a href="#contact" class="js-scroll scroll-to scroll-to-intro"></a>
 </section>
 
 
@@ -180,15 +179,15 @@
     
     <div class="contact-social">
       <div class="contact-logo">
-        <img src="/src/assets/ka_logo.svg">
+        <img src="ka_logo.svg">
       </div>
 
       <div class="social flex justify-between items-center">
-        <a href="https://github.com/naneng" class="no-underline ml3 db">
-            <img src="/src/assets/githubicon.svg" class="db" />
+        <a href="https://github.com/naneng" class="db">
+            <img src="githubicon.svg" class="db" />
         </a>
         <a href="https://www.linkedin.com/in/katrina-ariola-b7384812/" class="no-underline ml3 db">
-            <img src="/src/assets/linkedinicon.svg" class="db" />
+            <img src="linkedinicon.svg" class="db" />
         </a>
       </div>
     </div>
