updated portfolio hover styles and added language filter function

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
 
   <nav class="filters">
     <div class="container">
-      <a href="#" class="show-filters">Languages</a>
+      <a href="#" class="show-filters">Projects Coded With <+></a>
       <ul class="filters-list" id="filters-list">
         <li>
           <a href="#" class="selected" data-filter=".language">All</a>
@@ -155,7 +155,7 @@
 
         </div>
 
-        <div class="w-25 h-100 bg-blue box">
+        <div class="project w-25 h-100 bg-blue box">
           <a class="project_item" href="https://brux-377.superhi.com/" target="_blank" value="html css javascript">
               <h2 class="project_title">Brux</h2>
               <p class="project_info">2022 <+> SuperHi <+> Portfolio</p>
